# rust-openclaw

./: Cargo.toml  README.en.md  README.md  config.example.toml
skills/: README.md
skills/screen_record/: skill.toml
skills/screenshot/: skill.toml
src/: bot.rs  config.rs  executor.rs  llm_client.rs  log.rs  main.rs  skills.rs
